--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: ruisu
 Type: Package
 Title: Tools for habitual tasks
-Version: 1.0
+Version: 2.0
 Date: 2014-03-06
-Author: Wencheng Lau
-Maintainer: Wencheng Lau <llau@imarpe.gob.pe>
-Description: Tools for common tasks at IMARPE
+Author: Wencheng Lau-Medrano
+Maintainer: Wencheng Lau-Medrano <luis.laum@gmail.com>
+Description: Tools for common tasks
 License: GLP-2
-Depends: ncdf, grid, sp, rgdal, mapdata, calibrate, zoo, ggmap, raster
+Depends: calibrate, ggmap, grid, lubridate, mapdata, ncdf, raster, RCurl, rgdal, sp, zoo
 LazyData: true
