--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,12 +12,7 @@ LazyData: true
 Imports:
     Rcpp (>= 0.12.3),
     lubridate,
-    mapdata,
-    RNetCDF,
-    raster,
-    RCurl,
-    maptools,
-    sp,
-    zoo
+    rgdal,
+    maps
 LinkingTo: Rcpp
 RoxygenNote: 5.0.1
