--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,12 +4,10 @@ export(counterZOO)
 export(digitsum)
 export(getProportion)
 export(getSatellitalMaps)
-import(RCurl)
-import(RNetCDF)
+export(p2pDistance)
+export(plotIsoparalitoral)
 import(lubridate)
-import(mapdata)
-import(maptools)
-import(raster)
-import(zoo)
+import(maps)
+import(rgdal)
 importFrom(Rcpp,evalCpp)
-useDynLib(oXim)
+useDynLib(ruisu)
