--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(calculateWaterMass)
 export(centroidAssigner)
 export(counterZOO)
 export(digitsum)
+export(getHarbor)
 export(getProportion)
 export(getSatellitalMaps)
 export(isopArea.assigner)
