--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,11 +9,11 @@ Maintainer: Wencheng Lau-Medrano <luis.laum@gmail.com>
 Description: Tools for common tasks
 License: GPL (>= 2)
 LazyData: true
+Depends: maps
 Imports:
     Rcpp (>= 0.12.3),
     lubridate,
     rgdal,
-    maps,
     stats,
     RCurl
 LinkingTo: Rcpp
