--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(getHarbor)
 export(getProportion)
 export(getSatellitalMaps)
 export(isopArea.assigner)
+export(lengthFrequencyPlot)
 export(p2pDistance)
 export(plotIsoparalitoral)
 export(randomRectangles)
@@ -15,6 +16,7 @@ import(RCurl)
 import(lubridate)
 import(maps)
 import(rgdal)
+import(sp)
 import(stats)
 importFrom(Rcpp,evalCpp)
 useDynLib(ruisu)
