--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(getProportion)
 export(getSatellitalMaps)
 export(isopArea.assigner)
 export(lengthFrequencyPlot)
+export(newYear)
 export(p2pDistance)
 export(plotIsoparalitoral)
 export(randomRectangles)
