Some corrections and new function.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(lengthFrequencyPlot)
 export(newYear)
 export(p2pDistance)
 export(plotIsoparalitoral)
+export(prepareProjFolder)
 export(randomRectangles)
 import(RCurl)
 import(lubridate)
