Add new function.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(calculateWaterMass)
 export(centroidAssigner)
 export(counterZOO)
 export(digitsum)
+export(getCoordsAxes)
 export(getHarbor)
 export(getProportion)
 export(getSatellitalMaps)
