Add function to search min distance to coast line.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(getProportion)
 export(getSatellitalMaps)
 export(isopArea.assigner)
 export(lengthFrequencyPlot)
+export(minDistanceToCoast)
 export(newYear)
 export(p2pDistance)
 export(plotIsoparalitoral)
