--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,6 +15,8 @@ Imports:
     lubridate,
     rgdal,
     stats,
-    RCurl
+    RCurl,
+    bitops,
+    stringr
 LinkingTo: Rcpp
 RoxygenNote: 5.0.1
