Add moving average function. Some changes in distance to coast calculator.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(getSatellitalMaps)
 export(isopArea.assigner)
 export(lengthFrequencyPlot)
 export(minDistanceToCoast)
+export(movingAverage)
 export(newYear)
 export(p2pDistance)
 export(plotIsoparalitoral)
