--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(centroidAssigner)
 export(counterZOO)
 export(digitsum)
 export(getCoordsAxes)
+export(getDegreeValues)
 export(getHarbor)
 export(getProportion)
 export(getSatellitalMaps)
