Some little changes.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,7 @@ Maintainer: Wencheng Lau-Medrano <luis.laum@gmail.com>
 Description: Tools for common tasks
 License: GPL (>= 2)
 LazyData: true
-Depends: maps, sp
+Depends: maps, sp, R (>= 3.2.0)
 Imports:
     Rcpp (>= 0.12.3),
     lubridate,
