--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(newYear)
 export(p2pDistance)
 export(plotIsoparalitoral)
 export(prepareProjFolder)
+export(progressBar)
 export(randomRectangles)
 import(RCurl)
 import(lubridate)
