Some little changes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(getCoordsAxes)
 export(getHarbor)
 export(getProportion)
 export(getSatellitalMaps)
+export(isNearCoast)
 export(isopArea.assigner)
 export(lengthFrequencyPlot)
 export(minDistanceToCoast)
