Changes and improvements.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(counterZOO)
 export(digitsum)
 export(getCoordsAxes)
 export(getHarbor)
+export(getOverlay)
 export(getProportion)
 export(getSatellitalMaps)
 export(isNearCoast)
@@ -29,4 +30,5 @@ import(rgdal)
 import(sp)
 import(stats)
 importFrom(Rcpp,evalCpp)
+importFrom(raster,intersect)
 useDynLib(ruisu)
