Some Error corrections.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,17 +18,17 @@ export(lengthFrequencyPlot)
 export(minDistanceToCoast)
 export(movingAverage)
 export(newYear)
-export(p2pDistance)
 export(plotIsoparalitoral)
 export(prepareProjFolder)
 export(progressBar)
 export(randomRectangles)
 import(RCurl)
+import(grDevices)
+import(graphics)
 import(lubridate)
 import(maps)
 import(rgdal)
 import(sp)
 import(stats)
-importFrom(Rcpp,evalCpp)
+import(utils)
 importFrom(raster,intersect)
-useDynLib(ruisu)
