--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,6 @@ License: GPL (>= 2)
 LazyData: true
 Depends: maps, sp, R (>= 3.2.0)
 Imports:
-    Rcpp (>= 0.12.3),
     lubridate,
     raster,
     rgdal,
@@ -20,6 +19,8 @@ Imports:
     bitops,
     stringr,
     stringi,
-    magrittr
-LinkingTo: Rcpp
-RoxygenNote: 5.0.1
+    magrittr,
+    graphics,
+    utils,
+    grDevices
+RoxygenNote: 6.0.0
