--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(getSatellitalMaps)
 export(isNearCoast)
 export(isopArea.assigner)
 export(lengthFrequencyPlot)
+export(makeWindPlot)
 export(minDistanceToCoast)
 export(movingAverage)
 export(newYear)
@@ -23,6 +24,7 @@ export(prepareProjFolder)
 export(progressBar)
 export(randomRectangles)
 import(RCurl)
+import(fields)
 import(grDevices)
 import(graphics)
 import(lubridate)
@@ -31,4 +33,6 @@ import(rgdal)
 import(sp)
 import(stats)
 import(utils)
+importFrom(Rcpp,evalCpp)
 importFrom(raster,intersect)
+useDynLib(ruisu)
