Add new function: sillyTest.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(plotIsoparalitoral)
 export(prepareProjFolder)
 export(progressBar)
 export(randomRectangles)
+export(sillyTest)
 import(RCurl)
 import(fields)
 import(grDevices)
