Add getTopography function.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(getHarbor)
 export(getOverlay)
 export(getProportion)
 export(getSatellitalMaps)
+export(getTopography)
 export(getWatermasses)
 export(isNearCoast)
 export(isopArea.assigner)
