--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,8 +36,11 @@ import(grDevices)
 import(graphics)
 import(lubridate)
 import(maps)
+import(raster)
+import(rerddap)
 import(rgdal)
 import(sp)
+import(spam)
 import(stats)
 import(utils)
 importFrom(raster,intersect)
