--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,7 +15,6 @@ export(getCoordsAxes)
 export(getHarbor)
 export(getOverlay)
 export(getProportion)
-export(getSatellitalMaps)
 export(getTopography)
 export(getWatermasses)
 export(isNearCoast)
@@ -36,11 +35,11 @@ import(grDevices)
 import(graphics)
 import(lubridate)
 import(maps)
-import(raster)
 import(rerddap)
 import(rgdal)
 import(sp)
-import(spam)
 import(stats)
 import(utils)
+importFrom(raster,extract)
 importFrom(raster,intersect)
+importFrom(raster,rasterFromXYZ)
