New function, changes and improvements.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ export(prepareProjFolder)
 export(progressBar)
 export(randomRectangles)
 export(sillyTest)
+export(surveyTrack)
 import(RCurl)
 import(fields)
 import(grDevices)
@@ -43,3 +44,4 @@ import(utils)
 importFrom(raster,extract)
 importFrom(raster,intersect)
 importFrom(raster,rasterFromXYZ)
+importFrom(rgeos,gBuffer)
