New function: brokenBarplot

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(addInfoFilename)
 export(addTextBox)
 export(an)
 export(anc)
+export(brokenBarplot)
 export(calculateWaterMass)
 export(centroidAssigner)
 export(counterZOO)
