--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,7 +8,6 @@ export(addTextBox)
 export(an)
 export(anc)
 export(brokenBarplot)
-export(calculateWaterMass)
 export(centroidAssigner)
 export(counterZOO)
 export(digitsum)
@@ -18,7 +17,6 @@ export(getHarbor)
 export(getOverlay)
 export(getProportion)
 export(getTopography)
-export(getWatermasses)
 export(isNearCoast)
 export(isopArea.assigner)
 export(lengthFrequencyPlot)
@@ -26,24 +24,20 @@ export(makeWindPlot)
 export(minDistanceToCoast)
 export(movingAverage)
 export(newYear)
+export(paralelMaps)
 export(plotIsoparalitoral)
 export(prepareProjFolder)
 export(progressBar)
 export(randomRectangles)
 export(sillyTest)
 export(surveyTrack)
-import(RCurl)
 import(fields)
-import(grDevices)
 import(graphics)
-import(lubridate)
-import(maps)
-import(rerddap)
-import(rgdal)
+import(mapdata)
+import(raster)
+import(rgeos)
+import(rstudioapi)
 import(sp)
-import(stats)
-import(utils)
-importFrom(raster,extract)
-importFrom(raster,intersect)
-importFrom(raster,rasterFromXYZ)
-importFrom(rgeos,gBuffer)
+importFrom(lubridate,day)
+importFrom(lubridate,month)
+importFrom(lubridate,year)
