Add some fancy functions: notebanks_ATM and zigguratCreator.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ export(makeWindPlot)
 export(minDistanceToCoast)
 export(movingAverage)
 export(newYear)
+export(notebanks_ATM)
 export(paralelMaps)
 export(plotIsoparalitoral)
 export(prepareProjFolder)
@@ -31,6 +32,7 @@ export(progressBar)
 export(randomRectangles)
 export(sillyTest)
 export(surveyTrack)
+export(zigguratCreator)
 import(fields)
 import(graphics)
 import(mapdata)
