--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(counterZOO)
 export(digitsum)
 export(getAIPInfo)
 export(getCoordsAxes)
+export(getEnvirData)
 export(getHarbor)
 export(getOverlay)
 export(getProportion)
