New function. Improvements.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,11 +22,13 @@ export(isNearCoast)
 export(isopArea.assigner)
 export(lengthFrequencyPlot)
 export(makeWindPlot)
+export(marsdenSquare.assigner)
 export(minDistanceToCoast)
 export(movingAverage)
 export(newYear)
 export(notebanks_ATM)
 export(paralelMaps)
+export(peruvianGrid.assigner)
 export(plotIsoparalitoral)
 export(prepareProjFolder)
 export(progressBar)
