--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: ruisu
 Type: Package
-Title: Tools for habitual tasks
-Version: 1.0.0
+Title: Tools for funny and habitual tasks at IMARPE
+Version: 1.2.1
 Date: 2016-06-27
 Authors@R: c(person("Wencheng", "Lau-Medrano", role = c("aut", "cre"), email = "luis.laum@gmail.com"))
 Author: Wencheng Lau-Medrano [aut, cre]
