--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: ruisu
 Type: Package
-Title: Tools for funny and habitual tasks at IMARPE
-Version: 1.2.1
-Date: 2016-06-27
+Title: Tools for habitual tasks (and another fancy things) at IMARPE
+Version: 1.2.2
+Date: 2018-11-09
 Authors@R: c(person("Wencheng", "Lau-Medrano", role = c("aut", "cre"), email = "luis.laum@gmail.com"))
 Author: Wencheng Lau-Medrano [aut, cre]
 Maintainer: Wencheng Lau-Medrano <luis.laum@gmail.com>
@@ -10,4 +10,5 @@ Description: Tools for common tasks
 License: GPL (>= 2)
 LazyData: true
 Depends: sp, lubridate, rstudioapi, raster, fields, rgeos, mapdata, foreach, doSNOW, ncdf4, zoo, R (>= 3.2.0)
-RoxygenNote: 6.1.0
+RoxygenNote: 6.1.1
+Encoding: UTF-8
