Changes in structure of package, but not in form or functions performing.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,9 +15,7 @@ export(getAIPInfo)
 export(getCoordsAxes)
 export(getEnvirData)
 export(getHarbor)
-export(getOverlay)
 export(getProportion)
-export(getTopography)
 export(isNearCoast)
 export(isopArea.assigner)
 export(lengthFrequencyPlot)
@@ -38,11 +36,35 @@ export(surveyTrack)
 export(zigguratCreator)
 import(fields)
 import(graphics)
-import(mapdata)
+import(maps)
 import(raster)
 import(rgeos)
-import(rstudioapi)
 import(sp)
+import(utils)
+importFrom(doSNOW,registerDoSNOW)
+importFrom(foreach,foreach)
+importFrom(grDevices,dev.list)
+importFrom(grDevices,dev.new)
+importFrom(grDevices,dev.off)
+importFrom(grDevices,rainbow)
 importFrom(lubridate,day)
+importFrom(lubridate,is.Date)
+importFrom(lubridate,is.POSIXt)
 importFrom(lubridate,month)
 importFrom(lubridate,year)
+importFrom(ncdf4,nc_close)
+importFrom(ncdf4,nc_open)
+importFrom(ncdf4,ncvar_get)
+importFrom(rerddap,griddap)
+importFrom(rerddap,info)
+importFrom(rstudioapi,initializeProject)
+importFrom(rstudioapi,openProject)
+importFrom(stats,approx)
+importFrom(stats,complete.cases)
+importFrom(stats,filter)
+importFrom(stats,median)
+importFrom(stats,rbeta)
+importFrom(stats,rnorm)
+importFrom(stats,runif)
+importFrom(stats,spline)
+importFrom(zoo,as.yearmon)
