--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,15 @@
 Package: ruisu
 Type: Package
-Title: Tools for habitual tasks (and another fancy things) at IMARPE
-Version: 1.2.2
-Date: 2018-11-09
+Title: Tools for habitual tasks (and another fancy things) at IMARPE.
+Version: 1.3.1
+Date: 2019-04-25
 Authors@R: c(person("Wencheng", "Lau-Medrano", role = c("aut", "cre"), email = "luis.laum@gmail.com"))
 Author: Wencheng Lau-Medrano [aut, cre]
 Maintainer: Wencheng Lau-Medrano <luis.laum@gmail.com>
-Description: Tools for common tasks
+Description: Tools for common tasks as well as some fancy functions.
 License: GPL (>= 2)
 LazyData: true
-Depends: sp, utils, lubridate, rstudioapi, raster, fields, rgeos, mapdata, foreach, doSNOW, ncdf4, zoo, R (>= 3.2.0)
+Depends: utils, raster, fields, rgeos, sp, maps, graphics, R (>= 3.2.0)
+Imports: ncdf4, rstudioapi, stats, rerddap, lubridate, zoo, grDevices, foreach, doSNOW
 RoxygenNote: 6.1.1
 Encoding: UTF-8
