New function (barPercentage) and some changes and improvements.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(addInfoFilename)
 export(addTextBox)
 export(an)
 export(anc)
+export(barPercentage)
 export(brokenBarplot)
 export(centroidAssigner)
 export(counterZOO)
@@ -68,3 +69,4 @@ importFrom(stats,rnorm)
 importFrom(stats,runif)
 importFrom(stats,spline)
 importFrom(zoo,as.yearmon)
+importFrom(zoo,rollmean)
