Add tableAdd function.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,7 @@ export(progressBar)
 export(randomRectangles)
 export(sillyTest)
 export(surveyTrack)
+export(tableAdd)
 export(zigguratCreator)
 import(fields)
 import(graphics)
