--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: ruisu
 Type: Package
-Title: Tools for habitual tasks (and another fancy things) at IMARPE.
-Version: 1.3.3
-Date: 2019-04-25
+Title: Tools for habitual tasks (and another fancy things).
+Version: 1.4.1
+Date: 2020-07-14
 Authors@R: c(person("Wencheng", "Lau-Medrano", role = c("aut", "cre"), email = "luis.laum@gmail.com"))
 Author: Wencheng Lau-Medrano [aut, cre]
 Maintainer: Wencheng Lau-Medrano <luis.laum@gmail.com>
@@ -11,5 +11,5 @@ License: GPL (>= 2)
 LazyData: true
 Depends: utils, raster, fields, rgeos, sp, maps, graphics, R (>= 3.2.0)
 Imports: ncdf4, rstudioapi, stats, rerddap, lubridate, zoo, grDevices, foreach, doSNOW
-RoxygenNote: 7.0.2
+RoxygenNote: 7.1.1
 Encoding: UTF-8
