--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,13 +14,11 @@ export(counterZOO)
 export(digitsum)
 export(getAIPInfo)
 export(getCoordsAxes)
-export(getEnvirData)
 export(getHarbor)
 export(getProportion)
 export(isNearCoast)
 export(isopArea.assigner)
 export(lengthFrequencyPlot)
-export(makeWindPlot)
 export(marsdenSquare.assigner)
 export(minDistanceToCoast)
 export(movingAverage)
@@ -36,31 +34,53 @@ export(sillyTest)
 export(surveyTrack)
 export(tableAdd)
 export(zigguratCreator)
-import(fields)
-import(graphics)
-import(maps)
-import(raster)
-import(rgeos)
-import(sp)
-import(utils)
-importFrom(doSNOW,registerDoSNOW)
+importFrom(doParallel,registerDoParallel)
+importFrom(fields,image.plot)
+importFrom(fields,tim.colors)
+importFrom(foreach,"%dopar%")
 importFrom(foreach,foreach)
+importFrom(grDevices,adjustcolor)
 importFrom(grDevices,dev.list)
 importFrom(grDevices,dev.new)
 importFrom(grDevices,dev.off)
 importFrom(grDevices,rainbow)
-importFrom(lubridate,day)
+importFrom(graphics,abline)
+importFrom(graphics,arrows)
+importFrom(graphics,axis)
+importFrom(graphics,barplot)
+importFrom(graphics,box)
+importFrom(graphics,grid)
+importFrom(graphics,image)
+importFrom(graphics,lines)
+importFrom(graphics,mtext)
+importFrom(graphics,par)
+importFrom(graphics,plot.new)
+importFrom(graphics,plot.window)
+importFrom(graphics,points)
+importFrom(graphics,polygon)
+importFrom(graphics,text)
 importFrom(lubridate,is.Date)
 importFrom(lubridate,is.POSIXt)
 importFrom(lubridate,month)
 importFrom(lubridate,year)
-importFrom(ncdf4,nc_close)
-importFrom(ncdf4,nc_open)
-importFrom(ncdf4,ncvar_get)
-importFrom(rerddap,griddap)
-importFrom(rerddap,info)
+importFrom(maps,map)
+importFrom(parallel,makeCluster)
+importFrom(parallel,stopCluster)
+importFrom(rgeos,gBuffer)
 importFrom(rstudioapi,initializeProject)
 importFrom(rstudioapi,openProject)
+importFrom(sp,"coordinates<-")
+importFrom(sp,"proj4string<-")
+importFrom(sp,CRS)
+importFrom(sp,SpatialPoints)
+importFrom(sp,coordinates)
+importFrom(sp,dd2dms)
+importFrom(sp,over)
+importFrom(sp,plot)
+importFrom(sp,proj4string)
+importFrom(sp,spDists)
+importFrom(sp,spDistsN1)
+importFrom(stats,aggregate)
 importFrom(stats,approx)
 importFrom(stats,complete.cases)
 importFrom(stats,filter)
@@ -69,5 +89,6 @@ importFrom(stats,rbeta)
 importFrom(stats,rnorm)
 importFrom(stats,runif)
 importFrom(stats,spline)
-importFrom(zoo,as.yearmon)
+importFrom(utils,read.csv)
+importFrom(utils,write.csv)
 importFrom(zoo,rollmean)
