--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,30 @@
 Package: ruisu
 Type: Package
-Title: Tools for habitual tasks (and another fancy things).
-Version: 1.4.2
-Date: 2021-05-20
+Title: Tools for habitual tasks (and another fancy things)
+Version: 2.0.0
+Date: 2022-08-22
 Authors@R: c(person("Wencheng", "Lau-Medrano", role = c("aut", "cre"), email = "luis.laum@gmail.com"))
 Author: Wencheng Lau-Medrano [aut, cre]
 Maintainer: Wencheng Lau-Medrano <luis.laum@gmail.com>
 Description: Tools for common tasks as well as some fancy functions.
 License: GPL (>= 2)
-LazyData: true
-Depends: utils, raster, fields, rgeos, sp, maps, graphics, R (>= 3.2.0)
-Imports: ncdf4, rstudioapi, stats, rerddap, lubridate, zoo, grDevices, foreach, doSNOW
-RoxygenNote: 7.1.1
 Encoding: UTF-8
+LazyData: true
+LazyDataCompression: xz
+Imports: sp,
+  rgeos,
+  fields,
+  zoo,
+  doParallel,
+  parallel,
+  foreach,
+  stats,
+  maps,
+  rstudioapi,
+  grDevices,
+  graphics,
+  utils,
+  lubridate
+RoxygenNote: 7.2.1
+Depends: 
+    R (>= 3.5.0)
