Adding passwordGen function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ export(movingAverage)
 export(newYear)
 export(notebanks_ATM)
 export(paralelMaps)
+export(passwordGen)
 export(peruvianGrid.assigner)
 export(plotIsoparalitoral)
 export(prepareProjFolder)
@@ -62,6 +63,7 @@ importFrom(lubridate,is.Date)
 importFrom(lubridate,is.POSIXt)
 importFrom(lubridate,month)
 importFrom(lubridate,year)
+importFrom(magrittr,"%>%")
 importFrom(maps,map)
 importFrom(parallel,makeCluster)
 importFrom(parallel,stopCluster)
