--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,10 +20,9 @@ export(isopArea.assigner)
 export(lengthFrequencyPlot)
 export(marsdenSquare.assigner)
 export(minDistanceToCoast)
-export(movingAverage)
 export(newYear)
 export(notebanks_ATM)
-export(paralelMaps)
+export(parallelMaps)
 export(passwordGen)
 export(peruvianGrid.assigner)
 export(plotIsoparalitoral)
@@ -34,7 +33,11 @@ export(sillyTest)
 export(surveyTrack)
 export(tableAdd)
 export(zigguratCreator)
+import(mapdata)
+importFrom(abind,abind)
 importFrom(doParallel,registerDoParallel)
+importFrom(dplyr,filter)
+importFrom(dplyr,transmute)
 importFrom(fields,image.plot)
 importFrom(fields,tim.colors)
 importFrom(foreach,"%dopar%")
@@ -58,6 +61,7 @@ importFrom(graphics,plot.new)
 importFrom(graphics,plot.window)
 importFrom(graphics,points)
 importFrom(graphics,polygon)
+importFrom(graphics,rasterImage)
 importFrom(graphics,text)
 importFrom(lubridate,is.Date)
 importFrom(lubridate,is.POSIXt)
@@ -65,8 +69,11 @@ importFrom(lubridate,month)
 importFrom(lubridate,year)
 importFrom(magrittr,"%>%")
 importFrom(maps,map)
+importFrom(metR,LatLabel)
+importFrom(metR,LonLabel)
 importFrom(parallel,makeCluster)
 importFrom(parallel,stopCluster)
+importFrom(png,readPNG)
 importFrom(rgeos,gBuffer)
 importFrom(rstudioapi,initializeProject)
 importFrom(rstudioapi,openProject)
@@ -84,12 +91,12 @@ importFrom(sp,spDistsN1)
 importFrom(stats,aggregate)
 importFrom(stats,approx)
 importFrom(stats,complete.cases)
-importFrom(stats,filter)
 importFrom(stats,median)
 importFrom(stats,rbeta)
 importFrom(stats,rnorm)
 importFrom(stats,runif)
 importFrom(stats,spline)
+importFrom(utils,modifyList)
 importFrom(utils,read.csv)
 importFrom(utils,write.csv)
 importFrom(zoo,rollmean)
