--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,6 +46,7 @@ importFrom(grDevices,adjustcolor)
 importFrom(grDevices,dev.list)
 importFrom(grDevices,dev.new)
 importFrom(grDevices,dev.off)
+importFrom(grDevices,png)
 importFrom(grDevices,rainbow)
 importFrom(graphics,abline)
 importFrom(graphics,arrows)
