--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(brokenBarplot)
 export(centroidAssigner)
 export(counterZOO)
 export(digitsum)
+export(envir_downANDextract)
 export(getAIPInfo)
 export(getCoordsAxes)
 export(getHarbor)
@@ -36,7 +37,10 @@ export(zigguratCreator)
 import(mapdata)
 importFrom(abind,abind)
 importFrom(doParallel,registerDoParallel)
+importFrom(dplyr,distinct)
 importFrom(dplyr,filter)
+importFrom(dplyr,mutate)
+importFrom(dplyr,select)
 importFrom(dplyr,transmute)
 importFrom(fields,image.plot)
 importFrom(fields,tim.colors)
@@ -87,8 +91,6 @@ importFrom(sp,dd2dms)
 importFrom(sp,over)
 importFrom(sp,plot)
 importFrom(sp,proj4string)
-importFrom(sp,spDists)
-importFrom(sp,spDistsN1)
 importFrom(stats,aggregate)
 importFrom(stats,approx)
 importFrom(stats,complete.cases)
@@ -97,6 +99,9 @@ importFrom(stats,rbeta)
 importFrom(stats,rnorm)
 importFrom(stats,runif)
 importFrom(stats,spline)
+importFrom(terra,distance)
+importFrom(terra,extract)
+importFrom(terra,rast)
 importFrom(utils,modifyList)
 importFrom(utils,read.csv)
 importFrom(utils,write.csv)
